--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         .desert-background-img{
             background: url("img/desert.jpg") no-repeat center fixed;
         }
+		  #map { position:right; top:0; bottom:0; width:70%; }
     </style>
 
     <!--add required libraries-->
@@ -394,10 +395,11 @@
 
         createMap: function () {
             // create a map in the "map" div, set the view to a given place and zoom
-            var map = L.map('map', {zoomControl: false, scrollWheelZoom: false}).setView([44, -120], 7);
+            var map = L.map('map', {zoomControl: false, scrollWheelZoom: false}).setView([44, -120], 8);
 
             // add an base map, which can be either OSM, mapbox, tilelayer, wmslayer or those designed by yourself.
-            L.tileLayer('http://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png').addTo(map);
+			 L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/NatGeo_World_Map/MapServer/tile/{z}/{y}/{x}', {maxZoom: 16}).addTo(map);
+            //L.tileLayer('http://cartodb-basemaps-{s}.global.ssl.fastly.net/light_all/{z}/{x}/{y}.png').addTo(map);
 
             // // create a mini globe as the overview map control.
             // var miniMap = new L.Control.GlobeMiniMap({
