--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <p style="font-size:18px;text-align: justify;">Food insecurity high across the country, 75% of the rural population food insecure and 20% in Djibouti City.</p>
                         <p style="font-size:18px;text-align: justify;">As a result, an alarmingly low percentage of children are consuming a minimum acceptable diet (i.e., at least four food groups and three meals per day) and getting the right nutrients to
                             grow and thrive.</p>
-                    <img src="img/arid.jpg" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
+                    <img src="img/arid2.jpg" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
 
                 </p>
             </section>
