--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <style>
         .WB-logo-img {
             background: url(img/worldbank.png) no-repeat ;
-            top: 00px;
-            left: 900px;
+           position: fixed;
+            left: 70%;
             z-index: 1;
             width: 20%;
             height: auto;
-
         }
 
         .start-background-img {
