--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <style>
         .WB-logo-img {
             background: url(img/worldbank.png) no-repeat ;
-           position: fixed;
+			position: fixed;
             left: 70%;
             z-index: 1;
             width: 20%;
             height: auto;
+
         }
 
         .start-background-img {
@@ -81,7 +82,7 @@
 					<!--<p style="font-size:20px;">a World Bank Group project</p>-->
 					</h3>					
                 </div>
-				 <div class="background-fullscreen-setting text-responsive text-center">                 
+			<!--	 <div class="background-fullscreen-setting text-responsive text-center">                 
                     <p style="font-size:19px;
 					position: relative;
 					top: 60%;
@@ -91,7 +92,7 @@
                         Good nutrition is critical for the growth and development of babies and children during their first 1,000 days of life – from pregnancy to a child’s second birthday.</br>
                         During this critical time, malnutrition can cause irreversible damage to children’s brain development and their physical growth, putting them at increased risk of developing chronic illnesses later in life.
                     </p>
-                </div>
+                </div>-->
             </section>
 
             <section data-scene="Problem_Stunting">
@@ -101,10 +102,13 @@
                     <strong>The current level of stunting in Djibouti is <font color="#D85B3C">30 percent</font></strong>, which exceeds the WHO severity thresholds of <font color="#5676B8">20 percent</font>.
                     The main causes of stunting in Djibouti include low access to and utilization to of basic health services,
                     high levels of food insecurity and poor environmental health (water, sanitation and hygiene). </p>
+					</br>
+				<img src="img/concern-Stunting-Cycle.jpg" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
                 </br>
                 <body>
                 <div id="curve_chart" style="width: 500px; height: 380px"></div>
                 </body>
+				
             </section>
 
             <section data-scene="Djibouti_Locating_Stu">
@@ -235,27 +239,27 @@
 
 
     var Buildings_by_distance =
-        '<h7>Distance to Health Facilities</h7></br></br>'+
-        '<i style="background: #059931; opacity: 0.9"></i><p><b>0.1km</p>'+
-        '<i style="background: #2CA01C; opacity: 0.9"></i><p><b>0.10km - 0.25m</b></p>' +
-        '<i style="background: #a3db5f; opacity: 0.9"></i><p><b>0.25km - 0.50km</b></p>' +
-        '<i style="background: #d5f582; opacity: 0.9"></i><p><b>0.50km - 0.75km</b></p>' +
-        '<i style="background: #fbfba5; opacity: 0.9"></i><p><b>0.75km - 1.00km</b></p>' +
-        '<i style="background: #edc785; opacity: 0.9"></i><p><b>1.00km - 1.25km</b></p>' +
-        '<i style="background: #f59d4b; opacity: 0.9"></i><p><b>1.25km - 3.50km</b></p>' +
-        '<i style="background: #ff1105; opacity: 0.9"></i><p><b>3.50km+</b></p>'+
+        '<h7>Distance to Health Facilities (km)</h7></br></br>'+
+        '<i style="background: #059931; opacity: 0.9"></i><p><b>0.1</p>'+
+        '<i style="background: #2CA01C; opacity: 0.9"></i><p><b>0.10 - 0.25</b></p>' +
+        '<i style="background: #a3db5f; opacity: 0.9"></i><p><b>0.25 - 0.50</b></p>' +
+        '<i style="background: #d5f582; opacity: 0.9"></i><p><b>0.50 - 0.75</b></p>' +
+        '<i style="background: #fbfba5; opacity: 0.9"></i><p><b>0.75 - 1.00</b></p>' +
+        '<i style="background: #edc785; opacity: 0.9"></i><p><b>1.00 - 1.25</b></p>' +
+        '<i style="background: #f59d4b; opacity: 0.9"></i><p><b>1.25 - 3.50</b></p>' +
+        '<i style="background: #ff1105; opacity: 0.9"></i><p><b>3.50+</b></p>'+
         '<i class="fa fa-medkit"style="font-size:20px;color:#1d78c8;z-index: 1"></i><p><b>Health Facilities</b></p>';
 
 
-    var Sanitation_Coverage_legend= '<h7>Distance to Well Points</h7></br></br>'+
-        '<i style="background: #059931; opacity: 0.9"></i><p><b>0.1km</p>'+
-        '<i style="background: #2CA01C; opacity: 0.9"></i><p><b>0.10km - 0.25m</b></p>' +
-        '<i style="background: #a3db5f; opacity: 0.9"></i><p><b>0.25km - 0.50km</b></p>' +
-        '<i style="background: #d5f582; opacity: 0.9"></i><p><b>0.50km - 0.75km</b></p>' +
-        '<i style="background: #fbfba5; opacity: 0.9"></i><p><b>0.75km - 1.00km</b></p>' +
-        '<i style="background: #edc785; opacity: 0.9"></i><p><b>1.00km - 1.25km</b></p>' +
-        '<i style="background: #f59d4b; opacity: 0.9"></i><p><b>1.25km - 3.50km</b></p>' +
-        '<i style="background: #ff1105; opacity: 0.9"></i><p><b>3.50km+</b></p>'+
+    var Sanitation_Coverage_legend= '<h7>Distance to Well Points (km)</h7></br></br>'+
+        '<i style="background: #059931; opacity: 0.9"></i><p><b>0.1</p>'+
+        '<i style="background: #2CA01C; opacity: 0.9"></i><p><b>0.10 - 0.25</b></p>' +
+        '<i style="background: #a3db5f; opacity: 0.9"></i><p><b>0.25 - 0.50</b></p>' +
+        '<i style="background: #d5f582; opacity: 0.9"></i><p><b>0.50 - 0.75</b></p>' +
+        '<i style="background: #fbfba5; opacity: 0.9"></i><p><b>0.75 - 1.00</b></p>' +
+        '<i style="background: #edc785; opacity: 0.9"></i><p><b>1.00 - 1.25</b></p>' +
+        '<i style="background: #f59d4b; opacity: 0.9"></i><p><b>1.25 - 3.50</b></p>' +
+        '<i style="background: #ff1105; opacity: 0.9"></i><p><b>3.50+</b></p>'+
         '<i class="fa fa-tint"style="font-size:20px;color:#1d78c8;z-index: 1"></i><p><b>Well Points</b></p>';
 
 
