--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
                     The main causes of stunting in Djibouti include low access to and utilization to of basic health services,
                     high levels of food insecurity and poor environmental health (water, sanitation and hygiene). </p>
 					</br>
-				<img src="img/concern-Stunting-Cycle.jpg" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
+				<img src="img/StuntingCycle.jpg" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
                 </br>
 				</br>
-				<img src="img/sm-stunting-costs.jpg" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
+				<img src="img/stuntingcosts.jpg" class="img-responsive" alt="responsive image" style= "margin-left: auto;margin-right: auto;">
                 </br>
                 
 				
