--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
         'Health_Facilites': [L.geoJson.ajax('assets/HF.geojson', {
 			style: function(feature) {
-			return { marker	};
+			return { icon:marker	};
 	}
 })]
        ,
