--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
 	
 	function well_style (feature){
 	return{
+	fillColor: '#ffffff'
 	 fillOpacity: 0.75,
             weight: 1,
             opacity: 0.9,
@@ -354,10 +355,10 @@
 
         'Health_Facilites': [L.geoJson.ajax('assets/HF.geojson', {
 				style: well_style,
-				onEachFeature: function(feature, layer){
-				layer.bindTooltip(feature.properties.stu, {className: 'feature-label', permanent: false, direction: 'center'});
+				//onEachFeature: function(feature, layer){
+				//layer.bindTooltip(feature.properties.stu, {className: 'feature-label', permanent: false, direction: 'center'});
 				}
-            }), Sanitation_Coverage_legend],
+            })],
 
 		'Buildings_by_distance': [L.tileLayer('https://api.mapbox.com/styles/v1/lilili/cjkjs92nl4xts2rpktn94y4nh/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibGlsaWxpIiwiYSI6ImNqamZiczF1czA1bGIzcHAwN2J5NndyaG4ifQ.V5VP-UiOg5Uz8BQK_VqLpg', {
             id: 'mapbox.Buildings_by_distance'
