--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 	
 	function well_style (feature){
 	return{
-	fillColor: '#ffffff'
+	fillColor: '#ffffff',
 	 fillOpacity: 0.75,
             weight: 1,
             opacity: 0.9,
