--- a/index.html
+++ b/index.html
@@ -352,12 +352,7 @@
         }), was_region_legend],
 
         'Health_Facilites': [L.geoJson.ajax('assets/HF.geojson', {
-            //color: 'red',
-            //
-				style: function(feature) {
-			return {
-				icon: marker	};
-	}
+            color: 'red'            
 })]
        ,
 
