--- a/index.html
+++ b/index.html
@@ -268,12 +268,6 @@
         '<i style="background: #ff1105; opacity: 0.9"></i><p><b>3.50+</b></p>'+
         '<i class="fa fa-tint"style="font-size:20px;color:#1d78c8;z-index: 1"></i><p><b>Well Points</b></p>';
 
-
-	
-
-
-
-
     // stu Color&Style
     function stu_setColor(density){
 
@@ -313,15 +307,7 @@
         };
     }
 	
-	<!--function well_style (feature){	return{	icon: '<i class="fa fa-tint"style="font-size:20px;color:#1d78c8;z-index: 1">'};} -->
-	
-	var myStyle = {
-        "color": "#ff7800",
-        "weight": 5,
-        "opacity": 0.65
-    };
- 
-    var layers = {
+	var layers = {
 
         // Base Map Layers
         'ESRI': [L.tileLayer('http://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}')],
@@ -349,8 +335,18 @@
         }), was_region_legend],
 
         'Health_Facilites': [L.geoJson.ajax('assets/HF.geojson', {
-
-				style: myStyle })],
+	style: function(feature) {
+        return {
+            radius:6,
+            color: '#ffffff',
+            weight: 1,
+            opacity: 1,
+            fillOpacity: 0.7
+        }
+    },
+    pointToLayer: function (feature, latlng) {
+        return L.circleMarker(latlng)}; 
+	})],
 
         'Buildings_by_distance': [L.tileLayer('https://api.mapbox.com/styles/v1/lilili/cjkjs92nl4xts2rpktn94y4nh/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibGlsaWxpIiwiYSI6ImNqamZiczF1czA1bGIzcHAwN2J5NndyaG4ifQ.V5VP-UiOg5Uz8BQK_VqLpg', {
             id: 'mapbox.Buildings_by_distance'
