--- a/index.html
+++ b/index.html
@@ -342,7 +342,8 @@
            // weight: 1,
            // opacity: 1,
            // fillOpacity: 0.7
-	    icon: '<i class="fa fa-tint"style="font-size:20px;color:#1d78c8;z-index: 1"></i>'
+	   // icon: '<i class="fa fa-tint"style="font-size:20px;color:#1d78c8;z-index: 1"></i>'
+	   icon: '<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">'
         }
     },
     pointToLayer: function (feature, latlng) {
