--- a/index.html
+++ b/index.html
@@ -341,9 +341,8 @@
            // color: '#ffffff',
            // weight: 1,
            // opacity: 1,
-           // fillOpacity: 0.7
-	   // icon: '<i class="fa fa-tint"style="font-size:20px;color:#1d78c8;z-index: 1"></i>'
-	   icon: '<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">'
+           // fillOpacity: 0.7	  
+	   icon: icon: L.AwesomeMarkers.icon({icon: 'fa-medkit', prefix: 'fa', markerColor: '#1d78c8', iconColor: '#1d78c8'})
         }
     },
     pointToLayer: function (feature, latlng) {
