--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
            // weight: 1,
            // opacity: 1,
            // fillOpacity: 0.7	  
-	   icon: icon: L.AwesomeMarkers.icon({icon: 'fa-medkit', prefix: 'fa', markerColor: '#1d78c8', iconColor: '#1d78c8'})
+	   icon: L.AwesomeMarkers.icon({icon: 'fa-medkit', prefix: 'fa', markerColor: '#1d78c8', iconColor: '#1d78c8'})
         }
     },
     pointToLayer: function (feature, latlng) {
