--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         }
     },
     pointToLayer: function (feature, latlng) {
-        return L.circleMarker(latlng)} 
+        return L.marker(latlng)} 
 	})],
 
         'Buildings_by_distance': [L.tileLayer('https://api.mapbox.com/styles/v1/lilili/cjkjs92nl4xts2rpktn94y4nh/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibGlsaWxpIiwiYSI6ImNqamZiczF1czA1bGIzcHAwN2J5NndyaG4ifQ.V5VP-UiOg5Uz8BQK_VqLpg', {
