--- a/index.html
+++ b/index.html
@@ -181,26 +181,24 @@
             <section data-scene="end">
                 <div class=" background-fullscreen-setting" >
 				<div class="white-background-img background-fullscreen-setting text-responsive text-center" style="background-size: cover">				
-                    <div style="
-                           position: left;
-                           left: 0;
-                           right: 0;
+                    <div style="                          
                            bottom: 15%;
-                           top: 15%;
-                           left: 15%;
-                           right: 15%;
-                           width: 80%;
-                           height: 80%;">
-                        <video autoplay muted loop style=" width: 50%; overflow:hidden;z-index: -1">
+                           padding-top: 5%;
+                           padding-left: 25%;                         
+                          ">
+                        <video autoplay muted loop style=" width: 70%; overflow:hidden;z-index: -1">
                             <source src="assets/Stunting.mp4" type="video/mp4">
                         </video>
-
+						</div>
+						<div style=" 
+                           padding-top: 3%;
+                           padding-left: 10%;
+						   padding-right: 10%;						   
+                           width: 100%;
+                           height: 100%;">
                         <p style="
-                    /*position: fixed;*/
                     font-size:14px;
                     color:white;
-                    /*right:0;*/
-                    /*bottom: 0;*/
                     text-align: justify;
                     background-color: hsla(78, 100%, 0%, 0.59);
                     padding-top: 10px;
