--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             }
         }), was_region_legend],
 
-      'Health_Facilites': [L.geoJson.ajax('assets/HF.geojson', {onEachFeature:popUp},{
+      'Health_Facilites': [L.geoJson.ajax('assets/HF1.geojson', {onEachFeature:popUp},{
 		style: function(feature) {
         return {
             radius:6,
