--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         '<i style="background: #fef0d9"></i><p><b>0% - 15%</p>';
 		
 	var cropland_legend = '<h7>Land Use - Land Cover (2016)</h7></br></br>'+
-        '<i style="background: #b30000"></i><p><b>Cropland</p>';
+        '<i style="background: #fc8d59"></i><p><b>Cropland</p>';
 
 
     var was_region_legend ='<h7>Wasting Rate</h7></br></br>'+
@@ -338,7 +338,12 @@
             color: 'red',
             weight: 5
         })],
-
+		
+		'Djibouti_adm0_n': [L.geoJson.ajax('assets/Djibouti_adm0.geojson',{
+            color: '#757575',
+            weight: 1
+        })],
+		
         'stu_region': [L.geoJson.ajax('assets/Djibouti_adm2.geojson', {
             style: stu_style,
             onEachFeature: function (feature, layer) {
@@ -377,8 +382,8 @@
         })],
 		
 		'Cropland':[L.geoJson.ajax('assets/cropland.geojson',{
-		            color: 'red',
-            weight: 5	 
+		            color: '#fc8d59',
+            weight: 2	 
         }),cropland_legend],
 		
         'Buildings_by_distance_wells': [L.tileLayer('https://api.mapbox.com/styles/v1/lilili/cjknwptw68k582ss2xhvxswz9/tiles/256/{z}/{x}/{y}@2x?access_token=pk.eyJ1IjoibGlsaWxpIiwiYSI6ImNqamZiczF1czA1bGIzcHAwN2J5NndyaG4ifQ.V5VP-UiOg5Uz8BQK_VqLpg', {
@@ -393,7 +398,7 @@
         Djibouti_Locating_Stu: {lat: 11.870, lng: 42.000,zoom: 9, layers: ['stu_region']},
         Djibouti_Locating_Was: {lat: 11.870, lng: 42.000,zoom: 9, layers: ['was_region']},
         Health_Service: {lat: 11.5799, lng: 43.1100, zoom: 14, layers: ['ESRI','Buildings_by_distance','Health_Facilites']},
-		Food_Security: {lat: 11.80, lng: 42.5000,zoom: 9.3, layers: ['Djibouti_adm0', 'Cropland']},
+		Food_Security: {lat: 11.80, lng: 42.5000,zoom: 9.3, layers: ['Djibouti_adm0_n', 'Cropland']},
         Wash: {lat: 11.4900, lng: 43.000, zoom: 12.3,layers: ['ESRI','Buildings_by_distance_wells','Wells']},
         end: {lat: 11.8077519, lng: 42.591565, zoom: 24,position: 'fullpage'}
     };
