--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             id: 'mapbox.Buildings_by_distance'
         }),Buildings_by_distance],
 
-        'Wells': [L.geoJson.ajax('assets/Wells.geojson',{onEachFeature:popUp}, {
+        'Wells': [L.geoJson.ajax('assets/Wells1.geojson',{onEachFeature:popUp}, {
             color: 'red',
             weight: 4
         })],
