--- a/index.html
+++ b/index.html
@@ -358,10 +358,12 @@
             }
         }), was_region_legend],
 
-      'Health_Facilites': [L.geoJson.ajax('assets/HF.geojson', {onEachFeature:popUp},{
+      'Health_Facilites': [L.geoJson.ajax('assets/HF.geojson', 
+					  <!-- {onEachFeature:popUp},{-->
 		style: function(feature) {
         return {
             radius:6,
+	    fillColor: '#ffffff',
             color: '#ffffff',
             weight: 1,
             opacity: 1,
