--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
         }), was_region_legend],
 
       'Health_Facilites': [L.geoJson.ajax('assets/HF.geojson', 
-					  <!-- {onEachFeature:popUp},{-->
+					  <!-- {onEachFeature:popUp},-->
+					  {
 		style: function(feature) {
         return {
             radius:6,
