--- a/index.html
+++ b/index.html
@@ -362,17 +362,18 @@
 		style: function(feature) {
         return {
             radius:6,
-	    fillColor: '#ffffff',
+			fillColor:'#ffffff',
             color: '#ffffff',
             weight: 1,
             opacity: 1,
             fillOpacity: 0.7		 
         }
     },
+	onEachFeature:popUp,
     pointToLayer: function (feature, latlng) {
         return L.circleMarker(latlng)} 
-	},{onEachFeature:popUp})],
-
+	})],
+	    
         'Buildings_by_distance': [L.tileLayer('https://api.mapbox.com/styles/v1/lilili/cjkjs92nl4xts2rpktn94y4nh/tiles/256/{z}/{x}/{y}?access_token=pk.eyJ1IjoibGlsaWxpIiwiYSI6ImNqamZiczF1czA1bGIzcHAwN2J5NndyaG4ifQ.V5VP-UiOg5Uz8BQK_VqLpg', {
             id: 'mapbox.Buildings_by_distance'
         }),Buildings_by_distance],
